--- a/css/styles.css
+++ b/css/styles.css
@@ -25,9 +25,13 @@ body {
   font-size: 14px;
 }
 
-/* -all list- */
+/* -all list-(видаляє крапочки у списках) */
 .list {
   list-style: none;
+}
+/* -decor-(видаляє підчеркування) */
+.decor {
+  text-decoration: none;
 }
 
 /* -logo- */
@@ -38,8 +42,6 @@ body {
   font-size: 26px;
   line-height: calc(31 / 26);
   letter-spacing: 0.03em;
-
-  text-decoration: none;
 }
 .logo-footer {
   color: var(--hero-btntext-color);
@@ -48,30 +50,35 @@ body {
   color: #000000;
 }
 
-/* _______header_______ */
+/* -section-title- */
+.section-title {
+  font-size: 36px;
+  line-height: calc(42 / 36);
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
+/* ________header________ */
 .site-nav .link {
   color: var(--title-nav-color);
 
   font-weight: 500;
   line-height: calc(16 / 14);
   letter-spacing: 0.02em;
-
-  text-decoration: none;
 }
 .site-nav .link:hover,
 .site-nav .link:focus {
   color: var(--bcg-focus-btn-color);
 }
 .site-nav .current {
-  color: blueviolet;
+  color: var(--bcg-focus-btn-color);
 }
 .auth-nav .link {
   color: var(--text-color);
 
+  font-weight: 500;
   line-height: calc(16 / 14);
   letter-spacing: 0.02em;
-
-  text-decoration: none;
 }
 .auth-nav .link:hover,
 .auth-nav .link:focus {
@@ -87,6 +94,7 @@ body {
 .hero-title {
   color: var(--hero-btntext-color);
 
+  font-weight: 900;
   font-size: 44px;
   line-height: calc(60 / 44);
   text-align: center;
@@ -124,8 +132,7 @@ body {
   margin: -1px;
 }
 .features-title {
-  color: var(--title-nav-color);
-
+  font-size: 14px;
   line-height: calc(16 / 14);
   letter-spacing: 0.03em;
 }
@@ -137,20 +144,8 @@ body {
 }
 
 /* --work-- */
-.work-title {
-  font-size: 36px;
-  line-height: calc(42 / 36);
-  text-align: center;
-  letter-spacing: 0.03em;
-}
 
 /* --team-- */
-.team-title {
-  font-size: 36px;
-  line-height: calc(42 / 36);
-  text-align: center;
-  letter-spacing: 0.03em;
-}
 .teams-title {
   font-weight: 500;
   font-size: 16px;
@@ -174,8 +169,6 @@ body {
 
   line-height: calc(24 / 14);
   letter-spacing: 0.03em;
-
-  text-decoration: none;
 }
 .footer-list .link {
   color: var(--footer-link-color);
@@ -189,6 +182,9 @@ body {
 .footer-list .link:focus {
   color: var(--bcg-focus-btn-color);
 }
+.footer-list {
+  font-style: normal;
+}
 
 /* _______portfolio_______ */
 
@@ -200,6 +196,7 @@ body {
   font-size: 16px;
   line-height: calc(26 / 16);
   letter-spacing: 0.03em;
+  font-family: inherit;
 
   cursor: pointer;
 }
